freeimage.nim


proc FreeImage_OpenMemory*(data: ptr BYTE; size_in_bytes: DWORD): ptr FIMEMORY {.
    importc: "FreeImage_OpenMemory", dynlib: FreeImageLib.}
proc FreeImage_CloseMemory*(stream: ptr FIMEMORY) {.
    importc: "FreeImage_CloseMemory", dynlib: FreeImageLib.}
proc FreeImage_LoadFromMemory*(fif: FREE_IMAGE_FORMAT; stream: ptr FIMEMORY; 
                               flags: cint): ptr FIBITMAP {.
    importc: "FreeImage_LoadFromMemory", dynlib: FreeImageLib.}
proc FreeImage_SaveToMemory*(fif: FREE_IMAGE_FORMAT; dib: ptr FIBITMAP; 
                             stream: ptr FIMEMORY; flags: cint): BOOL {.
    importc: "FreeImage_SaveToMemory", dynlib: FreeImageLib.}
proc FreeImage_TellMemory*(stream: ptr FIMEMORY): clong {.
    importc: "FreeImage_TellMemory", dynlib: FreeImageLib.}
proc FreeImage_SeekMemory*(stream: ptr FIMEMORY; offset: clong; origin: cint): BOOL {.
    importc: "FreeImage_SeekMemory", dynlib: FreeImageLib.}
proc FreeImage_AcquireMemory*(stream: ptr FIMEMORY; data: ptr ptr BYTE; 
                              size_in_bytes: ptr DWORD): BOOL {.
    importc: "FreeImage_AcquireMemory", dynlib: FreeImageLib.}
proc FreeImage_ReadMemory*(buffer: pointer; size: cuint; count: cuint; 
                           stream: ptr FIMEMORY): cuint {.
    importc: "FreeImage_ReadMemory", dynlib: FreeImageLib.}
proc FreeImage_WriteMemory*(buffer: pointer; size: cuint; count: cuint; 
                            stream: ptr FIMEMORY): cuint {.
    importc: "FreeImage_WriteMemory", dynlib: FreeImageLib.}
proc FreeImage_LoadMultiBitmapFromMemory*(fif: FREE_IMAGE_FORMAT; 
    stream: ptr FIMEMORY; flags: cint): ptr FIMULTIBITMAP {.
    importc: "FreeImage_LoadMultiBitmapFromMemory", dynlib: FreeImageLib.}
proc FreeImage_SaveMultiBitmapToMemory*(fif: FREE_IMAGE_FORMAT; 
                                        bitmap: ptr FIMULTIBITMAP; 
                                        stream: ptr FIMEMORY; flags: cint): BOOL {.
    importc: "FreeImage_SaveMultiBitmapToMemory", dynlib: FreeImageLib.}
# Plugin Interface ---------------------------------------------------------

proc FreeImage_RegisterLocalPlugin*(proc_address: FI_InitProc; format: cstring; 
                                    description: cstring; extension: cstring; 
                                    regexpr: cstring): FREE_IMAGE_FORMAT {.
    importc: "FreeImage_RegisterLocalPlugin", dynlib: FreeImageLib.}
#the FreeImage_RegisterLocalPlugin function is not actually exported on my system
#so we are not going to import it
discard """
proc FreeImage_RegisterExternalPlugin*(path: cstring; format: cstring; 
                                       description: cstring; extension: cstring; 
                                       regexpr: cstring): FREE_IMAGE_FORMAT {.
    importc: "FreeImage_RegisterExternalPlugin", dynlib: FreeImageLib.}
"""
proc FreeImage_GetFIFCount*(): cint {.importc: "FreeImage_GetFIFCount", 
                                      dynlib: FreeImageLib.}
proc FreeImage_SetPluginEnabled*(fif: FREE_IMAGE_FORMAT; enable: BOOL): cint {.
    importc: "FreeImage_SetPluginEnabled", dynlib: FreeImageLib.}
proc FreeImage_IsPluginEnabled*(fif: FREE_IMAGE_FORMAT): cint {.
    importc: "FreeImage_IsPluginEnabled", dynlib: FreeImageLib.}
proc FreeImage_GetFIFFromFormat*(format: cstring): FREE_IMAGE_FORMAT {.
    importc: "FreeImage_GetFIFFromFormat", dynlib: FreeImageLib.}
proc FreeImage_GetFIFFromMime*(mime: cstring): FREE_IMAGE_FORMAT {.
    importc: "FreeImage_GetFIFFromMime", dynlib: FreeImageLib.}
proc FreeImage_GetFormatFromFIF*(fif: FREE_IMAGE_FORMAT): cstring {.
    importc: "FreeImage_GetFormatFromFIF", dynlib: FreeImageLib.}
proc FreeImage_GetFIFExtensionList*(fif: FREE_IMAGE_FORMAT): cstring {.
    importc: "FreeImage_GetFIFExtensionList", dynlib: FreeImageLib.}
proc FreeImage_GetFIFDescription*(fif: FREE_IMAGE_FORMAT): cstring {.
    importc: "FreeImage_GetFIFDescription", dynlib: FreeImageLib.}
proc FreeImage_GetFIFRegExpr*(fif: FREE_IMAGE_FORMAT): cstring {.
    importc: "FreeImage_GetFIFRegExpr", dynlib: FreeImageLib.}
proc FreeImage_GetFIFMimeType*(fif: FREE_IMAGE_FORMAT): cstring {.
    importc: "FreeImage_GetFIFMimeType", dynlib: FreeImageLib.}
proc FreeImage_GetFIFFromFilename*(filename: cstring): FREE_IMAGE_FORMAT {.
    importc: "FreeImage_GetFIFFromFilename", dynlib: FreeImageLib.}
proc FreeImage_GetFIFFromFilenameU*(filename: ptr uint16): FREE_IMAGE_FORMAT {.
    importc: "FreeImage_GetFIFFromFilenameU", dynlib: FreeImageLib.}
proc FreeImage_FIFSupportsReading*(fif: FREE_IMAGE_FORMAT): BOOL {.
    importc: "FreeImage_FIFSupportsReading", dynlib: FreeImageLib.}
proc FreeImage_FIFSupportsWriting*(fif: FREE_IMAGE_FORMAT): BOOL {.
    importc: "FreeImage_FIFSupportsWriting", dynlib: FreeImageLib.}
proc FreeImage_FIFSupportsExportBPP*(fif: FREE_IMAGE_FORMAT; bpp: cint): BOOL {.
    importc: "FreeImage_FIFSupportsExportBPP", dynlib: FreeImageLib.}
proc FreeImage_FIFSupportsExportType*(fif: FREE_IMAGE_FORMAT; 
                                      typen: FREE_IMAGE_TYPE): BOOL {.
    importc: "FreeImage_FIFSupportsExportType", dynlib: FreeImageLib.}
proc FreeImage_FIFSupportsICCProfiles*(fif: FREE_IMAGE_FORMAT): BOOL {.
    importc: "FreeImage_FIFSupportsICCProfiles", dynlib: FreeImageLib.}
proc FreeImage_FIFSupportsNoPixels*(fif: FREE_IMAGE_FORMAT): BOOL {.
    importc: "FreeImage_FIFSupportsNoPixels", dynlib: FreeImageLib.}
# Multipaging interface ----------------------------------------------------

proc FreeImage_OpenMultiBitmap*(fif: FREE_IMAGE_FORMAT; filename: cstring; 
                                create_new: BOOL; read_only: BOOL; 
                                keep_cache_in_memory: BOOL; flags: cint): ptr FIMULTIBITMAP {.
    importc: "FreeImage_OpenMultiBitmap", dynlib: FreeImageLib.}
proc FreeImage_OpenMultiBitmapFromHandle*(fif: FREE_IMAGE_FORMAT; 
    io: ptr FreeImageIO; handle: fi_handle; flags: cint): ptr FIMULTIBITMAP {.
    importc: "FreeImage_OpenMultiBitmapFromHandle", dynlib: FreeImageLib.}
proc FreeImage_SaveMultiBitmapToHandle*(fif: FREE_IMAGE_FORMAT; 
                                        bitmap: ptr FIMULTIBITMAP; 
                                        io: ptr FreeImageIO; handle: fi_handle; 
                                        flags: cint): BOOL {.
    importc: "FreeImage_SaveMultiBitmapToHandle", dynlib: FreeImageLib.}
proc FreeImage_CloseMultiBitmap*(bitmap: ptr FIMULTIBITMAP; flags: cint): BOOL {.
    importc: "FreeImage_CloseMultiBitmap", dynlib: FreeImageLib.}
proc FreeImage_GetPageCount*(bitmap: ptr FIMULTIBITMAP): cint {.
    importc: "FreeImage_GetPageCount", dynlib: FreeImageLib.}
proc FreeImage_AppendPage*(bitmap: ptr FIMULTIBITMAP; data: ptr FIBITMAP) {.
    importc: "FreeImage_AppendPage", dynlib: FreeImageLib.}
proc FreeImage_InsertPage*(bitmap: ptr FIMULTIBITMAP; page: cint; 
                           data: ptr FIBITMAP) {.
    importc: "FreeImage_InsertPage", dynlib: FreeImageLib.}
proc FreeImage_DeletePage*(bitmap: ptr FIMULTIBITMAP; page: cint) {.
    importc: "FreeImage_DeletePage", dynlib: FreeImageLib.}
proc FreeImage_LockPage*(bitmap: ptr FIMULTIBITMAP; page: cint): ptr FIBITMAP {.
    importc: "FreeImage_LockPage", dynlib: FreeImageLib.}
proc FreeImage_UnlockPage*(bitmap: ptr FIMULTIBITMAP; data: ptr FIBITMAP; 
                           changed: BOOL) {.importc: "FreeImage_UnlockPage", 
    dynlib: FreeImageLib.}
proc FreeImage_MovePage*(bitmap: ptr FIMULTIBITMAP; target: cint; source: cint): BOOL {.
    importc: "FreeImage_MovePage", dynlib: FreeImageLib.}
proc FreeImage_GetLockedPageNumbers*(bitmap: ptr FIMULTIBITMAP; pages: ptr cint; 
                                     count: ptr cint): BOOL {.
    importc: "FreeImage_GetLockedPageNumbers", dynlib: FreeImageLib.}
# Filetype request routines ------------------------------------------------

proc FreeImage_GetFileType*(filename: cstring; size: cint): FREE_IMAGE_FORMAT {.
    importc: "FreeImage_GetFileType", dynlib: FreeImageLib.}
proc FreeImage_GetFileTypeU*(filename: ptr uint16; size: cint): FREE_IMAGE_FORMAT {.
    importc: "FreeImage_GetFileTypeU", dynlib: FreeImageLib.}
proc FreeImage_GetFileTypeFromHandle*(io: ptr FreeImageIO; handle: fi_handle; 
                                      size: cint): FREE_IMAGE_FORMAT {.
    importc: "FreeImage_GetFileTypeFromHandle", dynlib: FreeImageLib.}
proc FreeImage_GetFileTypeFromMemory*(stream: ptr FIMEMORY; size: cint): FREE_IMAGE_FORMAT {.
    importc: "FreeImage_GetFileTypeFromMemory", dynlib: FreeImageLib.}
# Image type request routine -----------------------------------------------

proc FreeImage_GetImageType*(dib: ptr FIBITMAP): FREE_IMAGE_TYPE {.
    importc: "FreeImage_GetImageType", dynlib: FreeImageLib.}
# FreeImage helper routines ------------------------------------------------

proc FreeImage_IsLittleEndian*(): BOOL {.importc: "FreeImage_IsLittleEndian", 
    dynlib: FreeImageLib.}
proc FreeImage_LookupX11Color*(szColor: cstring; nRed: ptr BYTE; 
                               nGreen: ptr BYTE; nBlue: ptr BYTE): BOOL {.
    importc: "FreeImage_LookupX11Color", dynlib: FreeImageLib.}
proc FreeImage_LookupSVGColor*(szColor: cstring; nRed: ptr BYTE; 
                               nGreen: ptr BYTE; nBlue: ptr BYTE): BOOL {.
    importc: "FreeImage_LookupSVGColor", dynlib: FreeImageLib.}
# Pixel access routines ----------------------------------------------------

proc FreeImage_GetBits*(dib: ptr FIBITMAP): ptr BYTE {.
    importc: "FreeImage_GetBits", dynlib: FreeImageLib.}
proc FreeImage_GetScanLine*(dib: ptr FIBITMAP; scanline: cint): ptr BYTE {.
    importc: "FreeImage_GetScanLine", dynlib: FreeImageLib.}
proc FreeImage_GetPixelIndex*(dib: ptr FIBITMAP; x: cuint; y: cuint; 
                              value: ptr BYTE): BOOL {.
    importc: "FreeImage_GetPixelIndex", dynlib: FreeImageLib.}
proc FreeImage_GetPixelColor*(dib: ptr FIBITMAP; x: cuint; y: cuint; 
                              value: ptr RGBQUAD): BOOL {.
    importc: "FreeImage_GetPixelColor", dynlib: FreeImageLib.}
proc FreeImage_SetPixelIndex*(dib: ptr FIBITMAP; x: cuint; y: cuint; 
                              value: ptr BYTE): BOOL {.
    importc: "FreeImage_SetPixelIndex", dynlib: FreeImageLib.}
proc FreeImage_SetPixelColor*(dib: ptr FIBITMAP; x: cuint; y: cuint; 
                              value: ptr RGBQUAD): BOOL {.
    importc: "FreeImage_SetPixelColor", dynlib: FreeImageLib.}
# DIB info routines --------------------------------------------------------
